# Camera2

./: .gitignore  Android.mk  AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  version.mk
jni/: Android.mk  jpegutil.cpp  jpegutilnative.cpp
jni/jpegutil/: jpegutil.cpp  jpegutil.h
jni/libs/: README.md
jni/tinyplanet/: tinyplanet.cc
res/layout/: activity_camera.xml  photo_bottombar_buttons.xml  photo_intent_bottombar_buttons.xml  sticky_bottom_capture_layout.xml  video_bottombar_buttons.xml  video_intent_bottombar_buttons.xml
res/layout-land/: mode_options.xml
res/layout-port/: mode_options.xml
res/values/: colors.xml
res/values-ar/: strings.xml
res/values-b+sr+Latn/: strings.xml
res/values-bn/: strings.xml
res/values-bs/: strings.xml
res/values-ca/: strings.xml
res/values-cs/: strings.xml
res/values-da/: strings.xml
res/values-de/: strings.xml
res/values-eu/: strings.xml
res/values-fa/: strings.xml
res/values-fi/: strings.xml
res/values-gl/: strings.xml
res/values-gu/: strings.xml
res/values-hi/: strings.xml
res/values-hy/: strings.xml
res/values-in/: strings.xml
res/values-iw/: strings.xml
res/values-kn/: strings.xml
res/values-ko/: strings.xml
res/values-ky/: strings.xml
res/values-mk/: strings.xml
res/values-mn/: strings.xml
res/values-mr/: strings.xml
res/values-my/: strings.xml
res/values-ne/: strings.xml
res/values-nl/: strings.xml
res/values-pa/: strings.xml
res/values-pt-rPT/: strings.xml
res/values-sr/: strings.xml
res/values-sw/: strings.xml
res/values-th/: strings.xml
res/values-uz/: strings.xml
res/values-zh-rCN/: strings.xml
res_p/mipmap-anydpi/: logo_camera_color.xml
src/android/util/: CameraPerformanceTracker.java  Pools.java
src/com/android/camera/: AccessibilityUtil.java  AnimationManager.java  ButtonManager.java  CameraActivity.java  CameraDisabledException.java  CameraHardwareException.java  CameraModule.java  CameraTestDevice.java  CaptureActivity.java  CaptureLayoutHelper.java  CaptureModule.java  CaptureModuleUI.java  CaptureModuleUtil.java  DisableCameraReceiver.java  Exif.java  FatalErrorHandler.java  FatalErrorHandlerImpl.java  FocusOverlayManager.java  MediaSaverImpl.java  MultiToggleImageButton.java  OnScreenHint.java  PanoProgressBar.java  PanoUtil.java  PermissionsActivity.java  PhotoController.java  PhotoModule.java  PhotoUI.java  ProxyLauncher.java  SecureCameraActivity.java  ShutterButton.java  SoundPlayer.java  Storage.java  SurfaceTextureRenderer.java  TextureViewHelper.java  Thumbnail.java  VideoController.java  VideoModule.java  VideoUI.java
src/com/android/camera/app/: AppController.java  CameraApp.java  CameraAppUI.java  CameraController.java  CameraProvider.java  CameraServices.java  CameraServicesImpl.java  FilmstripBottomPanel.java  FirstRunDetector.java  FirstRunDialog.java  LegacyLocationProvider.java  LocationProvider.java  MediaSaver.java  MemoryManager.java  MemoryManagerImpl.java  MemoryQuery.java  ModuleManager.java  ModuleManagerImpl.java  OrientationManager.java  OrientationManagerImpl.java
src/com/android/camera/async/: AndroidPriorityThread.java  BufferQueue.java  BufferQueueController.java  ConcurrentBufferQueue.java  ConcurrentState.java  CountableBufferQueue.java  ExecutorCallback.java  FilteredCallback.java  FilteredUpdatable.java  (+19 more)
src_frameworks/camera2/portability/tests/: Android.bp
src_frameworks/camera2/utils/tests/: Android.bp
src_light/com/iamluciano/camera/: CameraActivity.java
tests/: Android.mk
(+528 files in other folders)
